--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Calculator Project BD</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
+    <link rel="icon" href="https://thumbs.dreamstime.com/b/calculator-icon-vector-sign-symbol-isolated-white-backgro-calculator-icon-vector-isolated-white-background-your-web-133803455.jpg" type="image/icon type">
 </head>
 <body>
     
