calc container html added

--- a/index.html
+++ b/index.html
@@ -7,9 +7,16 @@
     <title>Calculator Project BD</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@100;400;700;800&display=swap" rel="stylesheet">
     <link rel="icon" href="https://thumbs.dreamstime.com/b/calculator-icon-vector-sign-symbol-isolated-white-backgro-calculator-icon-vector-isolated-white-background-your-web-133803455.jpg" type="image/icon type">
 </head>
 <body>
-    
+    <div class="calc-container">
+        <div class="top-row">
+            <h2>calc</h2>
+        </div>
+    </div>
 </body>
 </html>
