top row added including toggle switch

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculator Project BD</title>
+    <title>Calculator BD</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,6 +16,19 @@
     <div class="calc-container">
         <div class="top-row">
             <h2>calc</h2>
+            <div class="theme">
+                <h5>Theme</h5>
+                <div class="theme-number-div">
+                    <div class="numbers">
+                        <p>Dark</p>
+                        <p>Light</p>
+                    </div>
+                    <label class="switch">
+                        <input type="checkbox">
+                        <span class="slider round"></span>
+                    </label>
+                </div>
+            </div>
         </div>
     </div>
 </body>
