all section containers added

--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
                 </div>
             </div>
         </div>
+        <div class="output-row">
+
+        </div>
+        <div class="calc-buttons">
+            
+        </div>
     </div>
 </body>
 </html>
