--- a/index.html
+++ b/index.html
@@ -31,10 +31,29 @@
             </div>
         </div>
         <div class="output-row">
-
+            <div class="output-number">
+                <h1>Number</h1>
+            </div>
         </div>
         <div class="calc-buttons">
-            
+            <button class="number">7</button>
+            <button class="number">8</button>
+            <button class="number">9</button>
+            <button class="delete">DEL</button>
+            <button class="number">4</button>
+            <button class="number">5</button>
+            <button class="number">6</button>
+            <button class="number">+</button>
+            <button class="number">1</button>
+            <button class="number">2</button>
+            <button class="number">3</button>
+            <button class="number">-</button>
+            <button class="number">.</button>
+            <button class="number">0</button>
+            <button class="number">/</button>
+            <button class="number">x</button>
+            <button class="reset">RESET</button>
+            <button class="equals">=</button>
         </div>
     </div>
 </body>
