updated function name to be more descriptive

--- a/index.html
+++ b/index.html
@@ -35,20 +35,20 @@
             </div>
         </div>
         <div class="calc-buttons">
-            <button class="number" onclick="myFunction.bind(this)()">7</button>
-            <button class="number" onclick="myFunction.bind(this)()">8</button>
-            <button class="number" onclick="myFunction.bind(this)()">9</button>
+            <button class="number" onclick="changeText.bind(this)()">7</button>
+            <button class="number" onclick="changeText.bind(this)()">8</button>
+            <button class="number" onclick="changeText.bind(this)()">9</button>
             <button class="delete">DEL</button>
-            <button class="number" onclick="myFunction.bind(this)()">4</button>
-            <button class="number" onclick="myFunction.bind(this)()">5</button>
-            <button class="number" onclick="myFunction.bind(this)()">6</button>
+            <button class="number" onclick="changeText.bind(this)()">4</button>
+            <button class="number" onclick="changeText.bind(this)()">5</button>
+            <button class="number" onclick="changeText.bind(this)()">6</button>
             <button class="number">+</button>
-            <button class="number" onclick="myFunction.bind(this)()">1</button>
-            <button class="number" onclick="myFunction.bind(this)()">2</button>
-            <button class="number" onclick="myFunction.bind(this)()">3</button>
+            <button class="number" onclick="changeText.bind(this)()">1</button>
+            <button class="number" onclick="changeText.bind(this)()">2</button>
+            <button class="number" onclick="changeText.bind(this)()">3</button>
             <button class="number">-</button>
             <button class="number">.</button>
-            <button class="number" onclick="myFunction.bind(this)()">0</button>
+            <button class="number" onclick="changeText.bind(this)()">0</button>
             <button class="number">/</button>
             <button class="number">x</button>
             <button class="reset">RESET</button>
