allow multiple numbers to be added to display value

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
         <div class="output-row">
             <div class="output-number">
-                <h1 id="output-h1">Number</h1>
+                <h1 id="output-h1"></h1>
             </div>
         </div>
         <div class="calc-buttons">
