store the first number that is input into the calculator when a user presses an operator

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <button class="number" onclick="changeText.bind(this)()">4</button>
             <button class="number" onclick="changeText.bind(this)()">5</button>
             <button class="number" onclick="changeText.bind(this)()">6</button>
-            <button class="number">+</button>
+            <button class="number" onclick="add(valueOne, valueTwo)">+</button>
             <button class="number" onclick="changeText.bind(this)()">1</button>
             <button class="number" onclick="changeText.bind(this)()">2</button>
             <button class="number" onclick="changeText.bind(this)()">3</button>
