delete button functionality

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <button class="number" onclick="changeText.bind(this)()">7</button>
             <button class="number" onclick="changeText.bind(this)()">8</button>
             <button class="number" onclick="changeText.bind(this)()">9</button>
-            <button class="delete">DEL</button>
+            <button class="delete" onclick="deleteInt()">DEL</button>
             <button class="number" onclick="changeText.bind(this)()">4</button>
             <button class="number" onclick="changeText.bind(this)()">5</button>
             <button class="number" onclick="changeText.bind(this)()">6</button>
@@ -52,7 +52,7 @@
             <button class="number" onclick="divide(valueOne, valueTwo)">/</button>
             <button class="number" onclick="multiply(valueOne, valueTwo)">x</button>
             <button class="reset">RESET</button>
-            <button class="equals" onclick="operate(operator, valueOne, valueTwo)">=</button>
+            <button class="equals" onclick="operate(operator)">=</button>
         </div>
     </div>
     <script src="script.js"></script>
