added reset button and debugged deleteInt function

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <button class="number" onclick="changeText.bind(this)()">0</button>
             <button class="number" onclick="divide(valueOne, valueTwo)">/</button>
             <button class="number" onclick="multiply(valueOne, valueTwo)">x</button>
-            <button class="reset">RESET</button>
+            <button class="reset" onclick="reset()">RESET</button>
             <button class="equals" onclick="operate(operator)">=</button>
         </div>
     </div>
