--- a/index.html
+++ b/index.html
@@ -42,17 +42,17 @@
             <button class="number" onclick="changeText.bind(this)()">4</button>
             <button class="number" onclick="changeText.bind(this)()">5</button>
             <button class="number" onclick="changeText.bind(this)()">6</button>
-            <button class="number" onclick="add.bind(this)(valueOne, valueTwo)">+</button>
+            <button class="number" onclick="add(valueOne, valueTwo)">+</button>
             <button class="number" onclick="changeText.bind(this)()">1</button>
             <button class="number" onclick="changeText.bind(this)()">2</button>
             <button class="number" onclick="changeText.bind(this)()">3</button>
             <button class="number" onclick="subtract(valueOne, valueTwo)">-</button>
-            <button class="number">.</button>
+            <button class="number" onclick="changeText.bind(this)()">.</button>
             <button class="number" onclick="changeText.bind(this)()">0</button>
             <button class="number" onclick="divide(valueOne, valueTwo)">/</button>
             <button class="number" onclick="multiply(valueOne, valueTwo)">x</button>
             <button class="reset" onclick="reset()">RESET</button>
-            <button class="equals" onclick="operate(operator, valueOne, valueTwo)">=</button>
+            <button class="equals" onclick="operate(operator)">=</button>
         </div>
     </div>
     <script src="script.js"></script>
