refactored html and js to allow for quicker adjustment of logic

--- a/index.html
+++ b/index.html
@@ -35,24 +35,24 @@
             </div>
         </div>
         <div class="calc-buttons">
-            <button class="number" onclick="changeText.bind(this)()">7</button>
-            <button class="number" onclick="changeText.bind(this)()">8</button>
-            <button class="number" onclick="changeText.bind(this)()">9</button>
-            <button class="delete" onclick="deleteInt()">DEL</button>
-            <button class="number" onclick="changeText.bind(this)()">4</button>
-            <button class="number" onclick="changeText.bind(this)()">5</button>
-            <button class="number" onclick="changeText.bind(this)()">6</button>
-            <button class="number" onclick="add(valueOne, valueTwo)">+</button>
-            <button class="number" onclick="changeText.bind(this)()">1</button>
-            <button class="number" onclick="changeText.bind(this)()">2</button>
-            <button class="number" onclick="changeText.bind(this)()">3</button>
-            <button class="number" onclick="subtract(valueOne, valueTwo)">-</button>
-            <button class="number" onclick="changeText.bind(this)()">.</button>
-            <button class="number" onclick="changeText.bind(this)()">0</button>
-            <button class="number" onclick="divide(valueOne, valueTwo)">/</button>
-            <button class="number" onclick="multiply(valueOne, valueTwo)">x</button>
-            <button class="reset" onclick="reset()">RESET</button>
-            <button class="equals" onclick="operate(operator)">=</button>
+            <input type="button" value="7" class="number">
+            <input type="button" value="8" class="number">
+            <input type="button" value="9" class="number">
+            <input type="button" value="DEL" class="delete">
+            <input type="button" value="4" class="number">
+            <input type="button" value="5" class="number">
+            <input type="button" value="6" class="number">
+            <input type="button" value="+" class="number">
+            <input type="button" value="1" class="number">
+            <input type="button" value="2" class="number">
+            <input type="button" value="3" class="number">
+            <input type="button" value="-" class="number">
+            <input type="button" value="." class="number">
+            <input type="button" value="0" class="number">
+            <input type="button" value="/" class="number">
+            <input type="button" value="x" class="number">
+            <input type="button" value="RESET" class="reset">
+            <input type="button" value="=" class="equals">
         </div>
     </div>
     <script src="script.js"></script>
