--- a/index.html
+++ b/index.html
@@ -42,15 +42,15 @@
             <input type="button" value="4" class="number">
             <input type="button" value="5" class="number">
             <input type="button" value="6" class="number">
-            <input type="button" value="+" class="number">
+            <input type="button" value="+" class="operator">
             <input type="button" value="1" class="number">
             <input type="button" value="2" class="number">
             <input type="button" value="3" class="number">
-            <input type="button" value="-" class="number">
+            <input type="button" value="-" class="operator">
             <input type="button" value="." class="number">
             <input type="button" value="0" class="number">
-            <input type="button" value="/" class="number">
-            <input type="button" value="x" class="number">
+            <input type="button" value="/" class="operator">
+            <input type="button" value="x" class="operator">
             <input type="button" value="RESET" class="reset">
             <input type="button" value="=" class="equals">
         </div>
