fully functional calculator with all four operations

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <input type="button" value="." class="number">
             <input type="button" value="0" class="number">
             <input type="button" value="/" class="operator">
-            <input type="button" value="x" class="operator">
+            <input type="button" value="*" class="operator">
             <input type="button" value="RESET" class="reset">
             <input type="button" value="=" class="equals">
         </div>
